Edited layout. Needs updates after training

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-check-circle fa-4x"></i>
           <h3 class="feature-title">Edgenuity</h3>
-          <p>Click above to login to Edgenuity</p>
+          <p>Click below to login to Edgenuity</p>
+          <p><a class="btn-info btn-sm" href="https://auth.edgenuity.com/Login/Login/Student" role="button">Edgenuity</a></p>
         </div>
 
         <div class="feature-box col-lg-4">
@@ -104,6 +105,9 @@
 
   <section class="colored-section" id="message">
 
+    <h2 class="message-text">About the Teacher</h2>
+    <p></p>
+
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
@@ -112,14 +116,14 @@
           <em>Mr. Romo</em>
         </div>
         <div class="carousel-item">
-          <h2 class="message-text">Woof</h2>
-          <img class="message-image" src="images/dog-img.jpg" alt="dog-profile">
-          <em>Benny Burner</em>
+          <h2 class="message-text">A recent hobby of mine is collecting and taking care of houseplants.</h2>
+          <img class="message-image" src="images/houseplants.jpeg" alt="houseplants">
+          <em>My collection</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="message-text">Kindergarten rocks!</h2>
-          <img class="message-image" src="images/lady2-img.jpeg" alt="lady2-profile">
-          <em>Maricel Latoza</em>
+          <h2 class="message-text">I'm a big believer that we are all lifelong learners and i'm currently learning how to program.</h2>
+          <img class="message-image" src="images/code.png" alt="code">
+          <em>Such as web develop, python and java!</em>
         </div>
       </div>
       <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
@@ -145,9 +149,9 @@
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary">Previous weeks</strong>
             <h3 class="mb-0">Last Weeks Newsletters</h3>
-            <div class="mb-1 text-muted">Aug 23</div>
+            <div class="mb-1 text-muted">TBD</div>
             <p class="card-text mb-auto">TBD</p>
-            <a href="https://docs.google.com/document/d/1JGeEj-YBJmSKG-DfILAbP0QJ4fVK1EWAqL5Dt48fD68/edit?usp=sharing" class="btn btn-secondary btn-lg" tabindex="-1" role="button" aria-disabled="true">Prior Newsletter</a>
+            <a href="https://docs.google.com/document/d/1JGeEj-YBJmSKG-DfILAbP0QJ4fVK1EWAqL5Dt48fD68/edit?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Prior Newsletter</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <svg class="bd-placeholder-img" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
@@ -164,7 +168,7 @@
             <h3 class="mb-0">This Weeks Newsletter</h3>
             <div class="mb-1 text-muted">Aug 23</div>
             <p class="mb-auto">The first week of virtual school.......</p>
-            <a href="https://docs.google.com/document/d/1JGeEj-YBJmSKG-DfILAbP0QJ4fVK1EWAqL5Dt48fD68/edit?usp=sharing" class="btn btn-secondary btn-lg" tabindex="-1" role="button" aria-disabled="true">Current Newsletter</a>
+            <a href="https://docs.google.com/document/d/1JGeEj-YBJmSKG-DfILAbP0QJ4fVK1EWAqL5Dt48fD68/edit?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Current Newsletter</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <svg class="bd-placeholder-img" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
@@ -189,31 +193,31 @@
 
       <div class="row">
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-          </svg>
-          <h2>DreamJobs</h2>
-          <p>A great section to read about an assortment of careers that you might be interested in pursuing!</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+          <img class="resource-image" src="images/dreamjob.png" alt="dreamjob-article-img">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">
+            </svg>
+            <h2>DreamJobs</h2>
+            <p>A great section to read about an assortment of careers that you might be interested in pursuing!</p>
+            <p><a class="btn-info btn-sm" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-          </svg>
-          <h2>Great Heroes</h2>
-          <p>Learn about modern and past heroes and their impact on our world. A great place to gain some inspriation!</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+          <img class="resource-image" src="images/dreamjob.png" alt="dreamjob-article-img">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">
+            </svg>
+            <h2>Great Heroes</h2>
+            <p>Learn about modern and past heroes and their impact on our world. A great place to gain some inspriation!</p>
+            <p><a class="btn-info btn-sm" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-          </svg>
-          <h2>Arts</h2>
-          <p>Read about the arts and even check out links for projects that you can do at home!</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+          <img class="resource-image" src="images/dreamjob.png" alt="dreamjob-article-img">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">
+            </svg>
+            <h2>Arts</h2>
+            <p>Read about the arts and even check out links for projects that you can do at home!</p>
+            <p><a class="btn-info btn-sm" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-4 -->
       </div>
     </div>
@@ -232,7 +236,7 @@
     <div class="container-fluid">
       <a href="https://twitter.com/jeffersonelemsd?lang=en"> <i class="social-icon fab fa-twitter"></i></a>
       <a href="https://www.facebook.com/JESDVS/"> <i class="social-icon fab fa-facebook-f"></i></a>
-      <a href="https://www.jsd.k12.ca.us/"> <i class="fas fa-graduation-cap"></i></a>
+      <a href="https://www.jsd.k12.ca.us/"> <i class="social-icon fas fa-graduation-cap"></i></a>
       <a href="mailto:bromo@jeffersonesd.org"> <i class="social-icon fas fa-envelope"></i></a>
     </div>
     <p>© Copyright 2020 #BenRomojr</p>
