--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="carousel-item container-fluid">
           <h2 class="message-text">I'm a big believer that we are all lifelong learners and i'm currently learning how to program.</h2>
           <img class="message-image" src="images/code.png" alt="code">
-          <em>Such as web develop, python and java!</em>
+          <em>Such as web development, python and java!</em>
         </div>
       </div>
       <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
