--- a/index.html
+++ b/index.html
@@ -86,16 +86,18 @@
         </div>
 
         <div class="feature-box col-lg-4">
-          <i class="icon fas fa-bullseye fa-4x"></i>
-          <h3 class="feature-title">resource2</h3>
+          <i class="icon fas fa-calculator fa-4x"></i>
+          <h3 class="feature-title">Khan Academy</h3>
           </h3>
-          <p>another resource, lexia?</p>
+          <p>Additional math practice and more!</p>
+          <p><a class="btn-info btn-sm" href="https://www.khanacademy.org/math/cc-fifth-grade-math" role="button">Khan Academy</a></p>
         </div>
 
         <div class="feature-box col-lg-4">
-          <i class="icon fas fa-heart fa-4x"></i>
-          <h3 class="feature-title">resource3</h3>
-          <p>another resource, clever? district links?</p>
+          <i class="icon fab fa-cuttlefish fa-4x"></i>
+          <h3 class="feature-title">Clever</h3>
+          <p>Use Clever to access LexiaCore5, Brainpop, and more!</p>
+          <p><a class="btn-info btn-sm" href="https://clever.com/in/jesd/student" role="button">Khan Academy</a></p>
         </div>
       </div>
     </div>
@@ -123,7 +125,7 @@
         <div class="carousel-item container-fluid">
           <h2 class="message-text">I'm a big believer that we are all lifelong learners and i'm currently learning how to program.</h2>
           <img class="message-image" src="images/code.png" alt="code">
-          <em>Such as web development, python and java!</em>
+          <em>Such as web develop, python and java!</em>
         </div>
       </div>
       <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
