--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <i class="icon fab fa-cuttlefish fa-4x"></i>
           <h3 class="feature-title">Clever</h3>
           <p>Use Clever to access LexiaCore5, Brainpop, and more!</p>
-          <p><a class="btn-info btn-sm" href="https://clever.com/in/jesd/student" role="button">Khan Academy</a></p>
+          <p><a class="btn-info btn-sm" href="https://clever.com/in/jesd/student" role="button">Clever</a></p>
         </div>
       </div>
     </div>
