--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <i class="icon fab fa-cuttlefish fa-4x"></i>
           <h3 class="feature-title">Clever</h3>
           <p>Use Clever to access LexiaCore5, Brainpop, and more!</p>
-          <p><a class="btn-info btn-sm" href="https://clever.com/in/jesd/student" role="button">Clever</a></p>
+          <p><a class="btn-info btn-sm" href="https://clever.com/in/jesd/student" role="button">Khan Academy</a></p>
         </div>
       </div>
     </div>
@@ -204,7 +204,7 @@
             <p><a class="btn-info btn-sm" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="resource-image" src="images/dreamjob.png" alt="dreamjob-article-img">
+          <img class="resource-image" src="images/MakeADifference.jpeg" alt="Make-A-Difference-img">
           <title>Placeholder</title>
           <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">
             </svg>
@@ -213,8 +213,8 @@
             <p><a class="btn-info btn-sm" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="resource-image" src="images/dreamjob.png" alt="dreamjob-article-img">
-          <title>Placeholder</title>
+          <img class="resource-image" src="images/art.jpeg" alt="Arts-img">
+          <title>Art</title>
           <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">
             </svg>
             <h2>Arts</h2>
