--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <p><a class="btn-info btn-sm" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="resource-image" src="images/art.jpeg" alt="Arts-img">
+          <img class="resource-image" src="images/Art.jpeg" alt="Arts-img">
           <title>Art</title>
           <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">
             </svg>
