--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <i class="icon fas fa-check-circle fa-4x"></i>
           <h3 class="feature-title">Edgenuity</h3>
           <p>Click below to login to Edgenuity</p>
-          <p><a class="btn-info btn-sm" href="https://auth.edgenuity.com/Login/Login/Student" role="button">Edgenuity</a></p>
+          <p><a class="btn-info btn-sm" href="https://sislogin.edgenuity.com" role="button">Edgenuity</a></p>
         </div>
 
         <div class="feature-box col-lg-4">
