--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <h3 class="mb-0">This Weeks Newsletter</h3>
             <div class="mb-1 text-muted">Aug 23</div>
             <p class="mb-auto">The first week of virtual school.......</p>
-            <a href="https://docs.google.com/document/d/1JGeEj-YBJmSKG-DfILAbP0QJ4fVK1EWAqL5Dt48fD68/edit?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Current Newsletter</a>
+            <a href="https://drive.google.com/file/d/1ZvMvMZQCBAayOkMgp1GNOClLaqxZFG9O/view?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Current Newsletter</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <svg class="bd-placeholder-img" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
