--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <i class="icon fas fa-check-circle fa-4x"></i>
           <h3 class="feature-title">Edgenuity</h3>
           <p>Click below to login to Edgenuity</p>
-          <p><a class="btn-info btn-sm" href="https://sislogin.edgenuity.com" role="button">Edgenuity</a></p>
+          <p><a class="btn-info btn-sm" href="https://auth.edgenuity.com/Login/Login/Student" role="button">Edgenuity</a></p>
         </div>
 
         <div class="feature-box col-lg-4">
@@ -97,7 +97,7 @@
           <i class="icon fab fa-cuttlefish fa-4x"></i>
           <h3 class="feature-title">Clever</h3>
           <p>Use Clever to access LexiaCore5, Brainpop, and more!</p>
-          <p><a class="btn-info btn-sm" href="https://clever.com/in/jesd/student" role="button">Clever</a></p>
+          <p><a class="btn-info btn-sm" href="https://clever.com/in/jesd/student" role="button">Khan Academy</a></p>
         </div>
       </div>
     </div>
@@ -168,15 +168,15 @@
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-success">Current</strong>
             <h3 class="mb-0">This Weeks Newsletter</h3>
-            <div class="mb-1 text-muted">Aug 23</div>
-            <p class="mb-auto">The first week of virtual school.......</p>
+            <div class="mb-1 text-muted">Aug 19</div>
+            <p class="mb-auto">Welcome!</p>
             <a href="https://drive.google.com/file/d/1ZvMvMZQCBAayOkMgp1GNOClLaqxZFG9O/view?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Current Newsletter</a>
           </div>
           <div class="col-auto d-none d-lg-block">
+            <img class="newsletter-image" src="images/newsletter1.png" alt="Current-Newsletter-img">
             <svg class="bd-placeholder-img" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Current Thumbnail</text>
-            </svg>
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Prior Thumbnail</text>
           </div>
         </div>
       </div>
@@ -213,7 +213,7 @@
             <p><a class="btn-info btn-sm" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="resource-image" src="images/Art.jpeg" alt="Arts-img">
+          <img class="resource-image" src="images/art.jpeg" alt="Arts-img">
           <title>Art</title>
           <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">
             </svg>
