--- a/index.html
+++ b/index.html
@@ -82,22 +82,21 @@
           <i class="icon fas fa-check-circle fa-4x"></i>
           <h3 class="feature-title">Edgenuity</h3>
           <p>Click below to login to Edgenuity</p>
-          <p><a class="btn-info btn-sm" href="https://auth.edgenuity.com/Login/Login/Student" role="button">Edgenuity</a></p>
+          <p><a class="btn-info btn-sm" href="https://sislogin.edgenuity.com" role="button">Edgenuity</a></p>
         </div>
 
         <div class="feature-box col-lg-4">
-          <i class="icon fas fa-calculator fa-4x"></i>
-          <h3 class="feature-title">Khan Academy</h3>
-          </h3>
-          <p>Additional math practice and more!</p>
-          <p><a class="btn-info btn-sm" href="https://www.khanacademy.org/math/cc-fifth-grade-math" role="button">Khan Academy</a></p>
+          <i class="icon fas fa-book"></i>
+          <h3 class="feature-title">Google Classroom</h3>
+          <p>Access our monring acivity and more</p>
+          <p><a class="btn-info btn-sm" href="https://classroom.google.com">Google Classroom</a></p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="icon fab fa-cuttlefish fa-4x"></i>
           <h3 class="feature-title">Clever</h3>
           <p>Use Clever to access LexiaCore5, Brainpop, and more!</p>
-          <p><a class="btn-info btn-sm" href="https://clever.com/in/jesd/student" role="button">Khan Academy</a></p>
+          <p><a class="btn-info btn-sm" href="https://clever.com/in/jesd/student" role="button">Clever</a></p>
         </div>
       </div>
     </div>
