--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <i class="icon fas fa-book"></i>
           <h3 class="feature-title">Google Classroom</h3>
           <p>Access our monring acivity and more</p>
-          <p><a class="btn-info btn-sm" href="https://classroom.google.com">Google Classroom</a></p>
+          <p><a class="btn-info btn-sm" href="https://classroom.google.com"role="button">Google Classroom</a></p>
         </div>
 
         <div class="feature-box col-lg-4">
