--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <i class="icon fas fa-book"></i>
           <h3 class="feature-title">Google Classroom</h3>
           <p>Access our monring acivity and more</p>
-          <p><a class="btn-info btn-sm" href="https://classroom.google.com"role="button">Google Classroom</a></p>
+          <p><a class="btn-info btn-sm" href="https://classroom.google.com" role="button">Google Classroom</a></p>
         </div>
 
         <div class="feature-box col-lg-4">
@@ -152,11 +152,12 @@
             <h3 class="mb-0">Last Weeks Newsletters</h3>
             <div class="mb-1 text-muted">TBD</div>
             <p class="card-text mb-auto">TBD</p>
-            <a href="https://docs.google.com/document/d/1JGeEj-YBJmSKG-DfILAbP0QJ4fVK1EWAqL5Dt48fD68/edit?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Prior Newsletter</a>
+            <a href="https://drive.google.com/file/d/1ZvMvMZQCBAayOkMgp1GNOClLaqxZFG9O/view?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Prior Newsletter</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <svg class="bd-placeholder-img" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-              <title>Placeholder</title>
+             <img class="newsletter-image" src="images/newsletter1.png" alt="Current-Newsletter-img">
+            <svg class="newsletter-image" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
+              <title>Last weeks Newsletter</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Prior Thumbnail</text>
             </svg>
           </div>
@@ -169,12 +170,12 @@
             <h3 class="mb-0">This Weeks Newsletter</h3>
             <div class="mb-1 text-muted">Aug 19</div>
             <p class="mb-auto">Welcome!</p>
-            <a href="https://drive.google.com/file/d/1ZvMvMZQCBAayOkMgp1GNOClLaqxZFG9O/view?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Current Newsletter</a>
+            <a href="https://drive.google.com/file/d/1nxBE8Ieyj867xPQCq68Nx_zLs5fxr4Jn/view?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Current Newsletter</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img class="newsletter-image" src="images/newsletter1.png" alt="Current-Newsletter-img">
-            <svg class="bd-placeholder-img" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-              <title>Placeholder</title>
+            <svg class="images/newsletter1.png" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
+              <title>Current Newsletter</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Current Thumbnail</text>
           </div>
         </div>
