--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary">Previous weeks</strong>
             <h3 class="mb-0">Last Weeks Newsletters</h3>
-            <div class="mb-1 text-muted">TBD</div>
-            <p class="card-text mb-auto">TBD</p>
+            <div class="mb-1 text-muted">Aug 19</div>
+            <p class="card-text mb-auto"></p>
             <a href="https://drive.google.com/file/d/1ZvMvMZQCBAayOkMgp1GNOClLaqxZFG9O/view?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Prior Newsletter</a>
           </div>
           <div class="col-auto d-none d-lg-block">
@@ -168,8 +168,8 @@
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-success">Current</strong>
             <h3 class="mb-0">This Weeks Newsletter</h3>
-            <div class="mb-1 text-muted">Aug 19</div>
-            <p class="mb-auto">Welcome!</p>
+            <div class="mb-1 text-muted">Aug 31</div>
+            <p class="mb-auto"></p>
             <a href="https://drive.google.com/file/d/1nxBE8Ieyj867xPQCq68Nx_zLs5fxr4Jn/view?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Current Newsletter</a>
           </div>
           <div class="col-auto d-none d-lg-block">
