--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </div>
           <div class="col-auto d-none d-lg-block">
             <img class="newsletter-image" src="images/newsletter1.png" alt="Current-Newsletter-img">
-            <svg class="images/newsletter1.png" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
+            <svg class="newsletter-image" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Current Newsletter</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Current Thumbnail</text>
           </div>
