--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="feature-box col-lg-4">
-          <i class="fas fa-book-reader"></i>
+          <i class="fas fa-book-reader fa-4x"></i>
           <h3 class="feature-title">Google Classroom</h3>
           <p>Access our monring acivity and more</p>
           <p><a class="btn-info btn-sm" href="https://classroom.google.com" role="button">Google Classroom</a></p>
