--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
           <i class="icon fas fa-check-circle fa-4x"></i>
           <h3 class="feature-title">Edgenuity</h3>
           <p>Click below to login to Edgenuity</p>
-          <p><a class="btn-info btn-sm" href="https://sislogin.edgenuity.com" role="button">Edgenuity</a></p>
+           <p><a class="btn-info btn-sm" href="https://sislogin.edgenuity.com" role="button">Edgenuity</a></p>
         </div>
 
         <div class="feature-box col-lg-4">
-          <i class="fas fa-book-reader fa-4x"></i>
+          <i class="icon fas fa-book-reader fa-4x"></i>
           <h3 class="feature-title">Google Classroom</h3>
-          <p>Access our monring acivity and more</p>
+          <p>Morning assignment and more!</p>
           <p><a class="btn-info btn-sm" href="https://classroom.google.com" role="button">Google Classroom</a></p>
         </div>
 
@@ -96,7 +96,7 @@
           <i class="icon fab fa-cuttlefish fa-4x"></i>
           <h3 class="feature-title">Clever</h3>
           <p>Use Clever to access LexiaCore5, Brainpop, and more!</p>
-          <p><a class="btn-info btn-sm" href="https://clever.com/in/jesd/student" role="button">Clever</a></p>
+          <p><a class="btn-info btn-sm" href="https://clever.com/in/jesd/student" role="button">Khan Academy</a></p>
         </div>
       </div>
     </div>
@@ -149,15 +149,15 @@
         <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary">Previous weeks</strong>
-            <h3 class="mb-0">Last Weeks Newsletters</h3>
-            <div class="mb-1 text-muted">Aug 19</div>
+            <h3 class="mb-0">Past Newsletters</h3>
+            <div class="mb-1 text-muted">Aug 19th</div>
             <p class="card-text mb-auto"></p>
-            <a href="https://drive.google.com/file/d/1ZvMvMZQCBAayOkMgp1GNOClLaqxZFG9O/view?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Prior Newsletter</a>
+            <a href="https://docs.google.com/document/d/1JGeEj-YBJmSKG-DfILAbP0QJ4fVK1EWAqL5Dt48fD68/edit?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Past Newsletters</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-             <img class="newsletter-image" src="images/newsletter1.png" alt="Current-Newsletter-img">
-            <svg class="newsletter-image" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-              <title>Last weeks Newsletter</title>
+            <img class="newsletter-image" src="images/newsletter1.png" alt="Current-Newsletter-img">
+            <svg class="bd-placeholder-img" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
+              <title>Past Newsletters</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Prior Thumbnail</text>
             </svg>
           </div>
@@ -168,13 +168,13 @@
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-success">Current</strong>
             <h3 class="mb-0">This Weeks Newsletter</h3>
-            <div class="mb-1 text-muted">Aug 31</div>
+            <div class="mb-1 text-muted">Aug 31st</div>
             <p class="mb-auto"></p>
-            <a href="https://drive.google.com/file/d/1nxBE8Ieyj867xPQCq68Nx_zLs5fxr4Jn/view?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Current Newsletter</a>
+            <a href="https://drive.google.com/file/d/1nxBE8Ieyj867xPQCq68Nx_zLs5fxr4Jn/view?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Newsletter</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img class="newsletter-image" src="images/newsletter1.png" alt="Current-Newsletter-img">
-            <svg class="newsletter-image" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
+            <svg class="bd-placeholder-img" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Current Newsletter</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Current Thumbnail</text>
           </div>
