--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <h3 class="mb-0">Past Newsletters</h3>
             <div class="mb-1 text-muted">Aug 19th</div>
             <p class="card-text mb-auto"></p>
-            <a href="https://docs.google.com/document/d/1JGeEj-YBJmSKG-DfILAbP0QJ4fVK1EWAqL5Dt48fD68/edit?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Past Newsletters</a>
+            <a href="https://drive.google.com/file/d/1nxBE8Ieyj867xPQCq68Nx_zLs5fxr4Jn/view?usp=sharing" class="btn btn-info btn-sm" tabindex="-1" role="button" aria-disabled="true">Past Newsletters</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img class="newsletter-image" src="images/newsletter1.png" alt="Current-Newsletter-img">
